# ghidrasql

./: CMakeLists.txt  README.md
prompts/: ghidrasql_agent.md
src/cli/: main.cpp
src/lib/include/ghidrasql/: ghidrasql.hpp  source.hpp
src/lib/src/: commands.cpp  http.cpp  source.cpp  source_libghidra.cpp
